Add -Xverify:none to base options